# nvSubquadratic

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AGENTS.md_1  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  LINGUA_EVAL.md  PERMUTATION_OPT_TRACKER.md  PERMUTATION_OPT_TRACKER_V2.md  PROTOCOL.md  Pipfile  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.txt  architecture.html  bench_compile.py  bench_speed.py  benchmarks.html  docs-tracker.md  final-experiments-neurips-overview.md  genindex.html  getting_started.html  glossary.html  how_hyenand_works.html  index.html  job.sh  job_data_lingua.sh  job_hipster.sh  job_hyena.sh  job_transformer.sh  lazy_config.html  nvsubquadratic.def  nvsubquadratic.sif  (+13 more)
.agents_docs/: changes.md  findings.md  jobs.md  overview.md
.agents_docs/experiments/: experiment-diffusion-smoketest.md
.agents_docs_1/: jobs.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  docs.yml  docstring_check.yml  gpu-tests.yml  lint.yml  pr-description-check.yml  release.yml
LICENSE/: License.txt  third_party.txt
_sources/: architecture.md.txt  index.rst.txt  lazy_config.md.txt
_sources/api_reference/: experiments.rst.txt
_sources/ops/: README.md.txt  mixed_boundary_conditions.md.txt
api_reference/: core.html  experiments.html  index.html  modules.html  networks.html  ops.html  parallel.html
benchmarks/: README.md  bench_step_time_vs_patch_size.py  bench_vit5_baseline.py  bench_vit5_compile.py  bench_vit5_optimized.py  bench_vit5_profile.py  benchmark_imagenet_diffusion_gpu.py  benchmark_patch_size_2d.py  compare_flops.py  step_breakdown_2026-02-26.jsonl  submit_bench_step_time_h100.sh
benchmarks/arc/: profile_2026-04-10.jsonl  profile_training_bottleneck.py  submit_profile_arc_a6000.sh  submit_profile_arc_geodude.sh
benchmarks/ops/: FP16_FFTCONV_RESULTS.md  README.md  bench_fftconv2d.py  bench_mlp.py  bench_subquadratic_fftconv.py
benchmarks/scripts/: bench_compile.sh  bench_optimized.sh  bench_profile.sh
benchmarks/vit5_imagenet/: README.md  bench_compile.sh  bench_optimized.sh  bench_profile.sh  bench_vit5_baseline.py  bench_vit5_compile.py  bench_vit5_hyena.py  bench_vit5_optimized.py  bench_vit5_profile.py  benchmark_imagenet_throughput.py  dataloader_profile_2026-02-25.md  dataloader_profile_2026-02-26.jsonl  debug_diffusion_init.py  profile_step_breakdown.py  profile_step_breakdown.sh  profile_training_bottleneck.py  validate_checkpoint.py  validate_checkpoint.sh  verify_dali_fused.py
docs/: api.rst  architecture.md  benchmarks.md  conf.py  getting_started.md  glossary.md  how_hyenand_works.md  index.rst  lazy_config.md  package_overview.md  reports.md  repository_overview.md  requirements.txt
docs/api/: utilities.rst
examples/: default_cfg.py  index.html  lightning_wrappers.py  overview_tracker.csv  overview_tracker.md  run.py  tmp_config.py  utils.py  verify_bulk_deit.py  verify_deit.py
examples_migrated/: mixer_factories.py
experiments/: __init__.py  default_cfg.py  experiment-overview.md  final-experiments-neurips-overview.md  lightning_wrappers.py  profile.py  run.py  trainer.py
nvsubq_paper/: __init__.py  lazy_config.py
nvsubquadratic/: __init__.py  lazy_config.py
ops/: MIXED_BC_PLAN.html  README.html  mixed_boundary_conditions.html
reports/: README.md
scripts/: _wandb_check_ablation.py  app_film_kernels.py  bench_arc_vit.py  bench_fftconv_compile.py  bench_short_causalconv1d_kernel.py  bench_subquadratic_fftconv.py  benchmark_dali_vs_folder.py  benchmark_dataloaders.py  benchmark_hyena_permutations.py  benchmark_imagenet_diffusion_gpu.py  benchmark_imagenet_throughput.py  benchmark_patch_size_2d.py  check_gpu_availability.py  compare_flops.py  compute_imagenet_stats.py  convert_imagenet_to_webdataset.py  download_zyda.py  eval_cfid.py  eval_jit_checkpoint_fid.py  evaluate_with_lingua.py  export_film_kernels.py  extract_imagenet_to_folder.py  extract_imagenet_to_folder.sh  extract_imagenet_to_tar.py  generate_jit_fid_stats.py  license_check.py  prepare_lingua_data.py  profile_batch_size.py  profile_dataloader_stages.py  profile_dataloader_stages.sh  profile_step_breakdown.py  profile_step_breakdown.sh  profile_training_bottleneck.py  profile_training_bottleneck.sh  run_benchmark_dali.sh  run_benchmark_dataloaders.sh  run_convert_imagenet_wds.sh  run_imagenet_vit5_hyena.sh  run_vit5_small_pretrain.sh  slurm_copy_imagenet.sh  (+24 more)
slurm/: SLURM_EOS.sh  build_amd64_sqsh.sh  convert_imagenet_to_folder.sh  download_well.sh  download_well_145872.out  download_well_145873.out  pack_imagenet_tar.sh  queue.sh  queue_well.sh  sanity_kan.sh  submit.sh  submit_flops.sh  submit_hybrid.sh  submit_hybrid_2node.sh  submit_hybrid_4node.sh  submit_hybrid_8node.sh  submit_hybrid_kan_1node.sh  submit_hybrid_kan_4node.sh  submit_in1k_cls.sh  submit_in1k_diff.sh  submit_in1k_diff_eos.sh  submit_well.sh  sync_wandb.sh  sync_wandb_submit_all.sh
tests/: README.md  __init__.py  conftest.py  e2e_distributed_gradient_test.py  e2e_gradient_from_optimizer_state.py  run_torchrun_tests.sh  test_arc_datamodule.py  test_arc_ttt_validation.py  test_arc_wrapper.py  test_autoregressive_wrapper.py  test_basic.py  test_causality_attn_mamba.py  test_causality_hyena.py  test_checkpoint_resume.py  test_circular_fftconv.py  test_circular_fftconv_fp16.py  test_circular_vs_fftconv_perf.py  test_classification_loss.py  test_compile_lcache.py  test_config_instantiation.py  test_dali_epoch_transition.py  test_dali_equivalence.py  test_dali_optimized_equivalence.py  test_dali_rand_augment.py  test_delta_hyena.py  test_diffusion_fid.py  test_diffusion_wrapper.py  test_distributed_backend.py  test_distributed_depthwise_conv_nd.py  test_ema_callback.py  test_fftconv2d_comparison.py  test_fftconv_chunked.py  test_fftconv_fp16.py  test_gpu_jpeg_decode.py  test_h5_caching.py  test_hf_diffusers_wrapper.py  test_hyena_film.py  test_image_grid_callback.py  test_iteration_speed_callback.py  test_lingua_adapter.py  (+27 more)
(+1447 files in other folders)
