[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvsubquadratic"
version = "0.1.0"
description = "A unified PyTorch-native library for subquadratic alternatives to quadratic attention method"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.10.0,<2.11.0",
    "torchvision>=0.25.0,<0.26.0",
    "einops>=0.6.0",
    "numpy>=1.21.0",
    "pyarrow>=14.0.0,<20.0.0",     # Constrained to be compatible with cudf/pylibcudf in NGC containers
    "datasets>=2.14.0",
    "diffusers>=0.25.0",
    "clean-fid>=0.1.35",
    "megatron-core",
    "pytorch-lightning>=2.0.0",
    "omegaconf>=2.3.0",
    "wandb>=0.15.0",
    "protobuf>=4.23.0,<6.0.0",     # Required for wandb gRPC transport provider
    "grpcio>=1.50.0",              # Required for wandb Connect transport provider
    "rich>=13.0.0",
    "Pillow",
    "huggingface_hub",
    "subquadratic-ops-torch-cu12",
    "timm==1.0.22",
    "nvidia-dali-cuda120",
]

[project.optional-dependencies]
# Optional: use QuACK fused RMSNorm kernel (Hopper/Blackwell only: H100, B200, B300).
# On Ampere and older GPUs the kernel is not available; RMSNorm uses PyTorch fallback.
quack = ["quack-kernels"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nvsubquadratic*"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore = [
    "C901",
    "D100",
    "E501",
    "E741",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF005",
    "RUF010",
]
select = [
    "C",   # Pylint conventions
    "D",   # Documentation formatting
    "E",   # style stuff, whitespaces
    "F",   # important pyflakes lints
    "I",   # import sorting
    "RUF", # Some Ruff-specific lints, unused noqas, etc.
    "W",   # Pylint warnings
]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "E402", "F401", "F403", "F811"]
"test_*.py" = ["D"]
"conftest.py" = ["D"]
"scripts/*.py" = ["D"]
"**/*.ipynb" = ["D"]
"benchmarks/vit5_imagenet/*.py" = ["D", "C408", "F841"]
"examples/vit5_imagenet/v2/*_ema.py" = ["D103"]
"examples/vit5_imagenet/v3_wessels/_base_config.py" = ["C408"]
"experiments/callbacks/model_ema.py" = ["D102"]
"experiments/datamodules/pde/well.py" = ["D"]
"experiments/lightning_wrappers/well_lightning_wrapper.py" = ["D", "D417"]
"nvsubq_paper/utils/qk_norm.py" = ["D"]
"nvsubquadratic/modules/drop_path.py" = ["D"]
"nvsubquadratic/modules/grn.py" = ["D"]
"nvsubquadratic/modules/hyena_nd.py" = ["D205"]
"nvsubquadratic/modules/kernels_nd.py" = ["D107"]
"nvsubquadratic/modules/layer_scale.py" = ["D"]
"nvsubquadratic/modules/register_reduction_head.py" = ["D107"]
"nvsubquadratic/modules/rms_norm.py" = ["D"]
"nvsubquadratic/modules/vit5_hyena_adapter.py" = ["D102"]
"nvsubquadratic/modules/vit5_residual_block.py" = ["D107"]
"nvsubquadratic/networks/vit5_classification.py" = ["D107"]
"nvsubquadratic/networks/vit5_general_purpose.py" = ["D107"]
"tests/test_vit5_components.py" = ["C408"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["nvsubquadratic"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
xfail_strict = true
addopts = [
    "--durations-min=30.0",
    "--durations=0",
    "--cov=nvsubquadratic",
    "--cov-report=term",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "nightly: full model validation against ImageNet (requires GPU, DALI, ImageNet data, wandb)",
]
