[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvsubquadratic"
dynamic = ["version"]
description = "A unified PyTorch-native library for subquadratic alternatives to quadratic attention methods with optimized CUDA kernels."
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.txt"]
authors = [
    { name = "NVIDIA Corporation" },
]
maintainers = [
    { name = "Farhad Ramezanghorbani", email = "farhadr@nvidia.com" },
    { name = "Saee Paliwal", email = "saeep@nvidia.com" },
]
keywords = [
    "pytorch",
    "deep-learning",
    "hyena",
    "mamba",
    "ckconv",
    "fft",
    "subquadratic-attention",
    "attention",
    "long-context",
    "cuda",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = [
    "torch>=2.10.0,<2.11.0",
    "torchvision>=0.25.0,<0.26.0",
    "einops>=0.6.0",
    "numpy>=1.21.0",
    "pyarrow>=14.0.0,<20.0.0",     # Constrained to be compatible with cudf/pylibcudf in NGC containers
    "datasets>=2.14.0",
    "megatron-core",
    "pytorch-lightning>=2.0.0",
    "omegaconf>=2.3.0",
    "wandb>=0.15.0",
    "protobuf>=4.23.0",
    "rich>=13.0.0",
    "Pillow",
    "huggingface_hub",
    "subquadratic-ops-torch-cu12>=0.2.0",
    "timm==1.0.24",
]

[project.urls]
Homepage = "https://github.com/NVIDIA-BioNeMo/nvSubquadratic"
Documentation = "https://nvidia-bionemo.github.io/nvSubquadratic/"
Repository = "https://github.com/NVIDIA-BioNeMo/nvSubquadratic"
Issues = "https://github.com/NVIDIA-BioNeMo/nvSubquadratic/issues"

[project.optional-dependencies]
# Optional: use QuACK fused RMSNorm kernel (Hopper/Blackwell only: H100, B200, B300).
# On Ampere and older GPUs the kernel is not available; RMSNorm uses PyTorch fallback.
quack = ["quack-kernels"]
# Optional: NVIDIA DALI data-loading pipeline, used by ImageNet and The Well examples.
# Not required for the core library; ~400 MB download.
dali = ["nvidia-dali-cuda120==1.53.0"]
all = ["quack-kernels", "nvidia-dali-cuda120==1.53.0"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
where = ["."]
include = ["nvsubquadratic*"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore = [
    "C901",
    "E501",
    "E741",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF005",
    "RUF010",
]
select = [
    "C",   # Pylint conventions
    "D",   # Documentation formatting
    "E",   # style stuff, whitespaces
    "F",   # important pyflakes lints
    "I",   # import sorting
    "RUF", # Some Ruff-specific lints, unused noqas, etc.
    "W",   # Pylint warnings
]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "E402", "F401", "F403", "F811"]
"test_*.py" = ["D"]
"conftest.py" = ["D"]
"scripts/*.py" = ["D", "E402"]
"scripts/**/*.py" = ["D", "E402"]
"benchmarks/*.py" = ["D", "E402"]
"benchmarks/**/*.py" = ["D", "E402"]
"reports/**/*.py" = ["D", "E402", "C408", "E731", "F841", "RUF059"]
"examples/**/ft_ablation/*.py" = ["D"]
"**/*.ipynb" = ["D"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["nvsubquadratic"]
known-third-party = ["wandb"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
xfail_strict = true
addopts = [
    "--durations-min=30.0",
    "--durations=0",
    "--cov=nvsubquadratic",
    "--cov-report=term",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "nightly: full model validation against ImageNet/WELL (requires GPU, data, wandb)",
]
