[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvsubquadratic"
dynamic = ["version"]
description = "A unified PyTorch-native library for subquadratic alternatives to quadratic attention methods with optimized CUDA kernels."
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.txt"]
authors = [
    { name = "NVIDIA Corporation" },
]
maintainers = [
    { name = "Farhad Ramezanghorbani", email = "farhadr@nvidia.com" },
    { name = "Saee Paliwal", email = "saeep@nvidia.com" },
]
keywords = [
    "pytorch",
    "deep-learning",
    "hyena",
    "mamba",
    "ckconv",
    "fft",
    "subquadratic-attention",
    "attention",
    "long-context",
    "cuda",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU :: NVIDIA CUDA",
]

# nvSubquadratic targets GPU workflows; the default install is batteries-included
# for training/experiments. The single exception is the accelerated CUDA-kernel
# package, which is an opt-in [cuda] extra (see below) because it is a source-only
# sdist requiring nvcc — keeping it out of core is what lets `pip install
# nvsubquadratic` succeed on machines without the CUDA toolkit (e.g. a downstream
# project's CPU CI). The importable operators only need torch/einops/omegaconf/numpy
# at runtime; the remaining deps power the training/data/experiment code.
dependencies = [
    "torch>=2.10.0,<2.11.0",
    "torchvision>=0.25.0,<0.26.0",
    "einops>=0.6.0",
    "numpy>=1.21.0",
    "pyarrow>=14.0.0,<20.0.0",     # Constrained to be compatible with cudf/pylibcudf in NGC containers
    "datasets>=2.14.0",
    "pytorch-lightning>=2.0.0",
    "omegaconf>=2.3.0",
    "wandb>=0.15.0",
    "rich>=13.0.0",
    "Pillow",
    # Note: protobuf and huggingface_hub were previously pinned here but are not
    # imported anywhere; they arrive transitively via wandb / datasets. Dropped.
    # megatron-core -> [distributed], timm -> [baselines] (see optional-deps).
]

[project.urls]
Homepage = "https://github.com/NVIDIA-BioNeMo/nvSubquadratic"
Documentation = "https://nvidia-bionemo.github.io/nvSubquadratic/"
Repository = "https://github.com/NVIDIA-BioNeMo/nvSubquadratic"
Issues = "https://github.com/NVIDIA-BioNeMo/nvSubquadratic/issues"

[project.optional-dependencies]
# Accelerated CUDA kernels (fused FFT-conv / direct causal-conv). Source-only
# sdist — building requires nvcc, so this is intentionally NOT a core dep: that
# is what lets `pip install nvsubquadratic` succeed without the CUDA toolkit
# (e.g. a downstream project's CPU CI). The operators import it lazily and the
# default fft_backend="torch_fft" path runs without it; install for the fast path:
#   pip install nvsubquadratic[cuda]
cuda = ["subquadratic-ops-torch-cu12>=0.2.0"]

# QuACK fused RMSNorm kernel (Hopper/Blackwell only: H100, B200, B300).
# On Ampere and older GPUs RMSNorm falls back to pure PyTorch automatically.
quack = ["quack-kernels"]

# NVIDIA DALI GPU data-loading pipeline, used by the ImageNet / The Well
# examples. Not required by the importable library; ~400 MB download.
dali = ["nvidia-dali-cuda120==1.53.0"]

# Megatron parallel state, needed only for context-parallel / distributed
# training via nvsubquadratic.parallel.utils.init_parallel_state. The operators
# themselves never import it; calling init_parallel_state without it raises a
# clear ImportError pointing here.
distributed = ["megatron-core"]

# timm — required only by the ConvNeXt UNet baseline models in
# nvsubquadratic.networks.baselines (stochastic-depth DropPath). Constructing
# those models with drop_path > 0 without it raises a clear ImportError.
baselines = ["timm==1.0.24"]

# Convenience union of every optional group.
all = ["nvsubquadratic[cuda,quack,dali,distributed,baselines]"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
where = ["."]
include = ["nvsubquadratic*"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore = [
    "C901",
    "E501",
    "E741",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF005",
    "RUF010",
]
select = [
    "C",   # Pylint conventions
    "D",   # Documentation formatting
    "E",   # style stuff, whitespaces
    "F",   # important pyflakes lints
    "I",   # import sorting
    "RUF", # Some Ruff-specific lints, unused noqas, etc.
    "W",   # Pylint warnings
]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "E402", "F401", "F403", "F811"]
"test_*.py" = ["D"]
"conftest.py" = ["D"]
"scripts/*.py" = ["D", "E402"]
"scripts/**/*.py" = ["D", "E402"]
"benchmarks/*.py" = ["D", "E402"]
"benchmarks/**/*.py" = ["D", "E402"]
"reports/**/*.py" = ["D", "E402", "C408", "E731", "F841", "RUF059"]
"examples/**/ft_ablation/*.py" = ["D"]
"**/*.ipynb" = ["D"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["nvsubquadratic"]
known-third-party = ["wandb"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
xfail_strict = true
addopts = [
    "--durations-min=30.0",
    "--durations=0",
    "--cov=nvsubquadratic",
    "--cov-report=term",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "nightly: full model validation against ImageNet/WELL (requires GPU, data, wandb)",
]
